--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -2,8 +2,8 @@
 
 
 [script://./bin/pwnybrau_read_tilt_stdout.sh]
-index = pwnbrau
+index = pwnybrau
 interval = 10
-source = pwnybrau_tilt
+source = pwnybrau_read_tilt.py
 sourcetype = pwnybrau_tilt
 disabled = 0
