repackaged as splunk app and kept certificates local to app

--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -1,9 +1,7 @@
-[default]
-
-
 [script://./bin/pwnybrau_read_tilt_stdout.sh]
-index = pwnbrau
+index = pwnybrau
 interval = 10
-source = pwnybrau_tilt
+source = pwnybrau_read_tilt.py
 sourcetype = pwnybrau_tilt
-disabled = 0
+start_by_shell = true
+disabled = 1
