--- a/src/publish.conf
+++ b/src/publish.conf
@@ -11,7 +11,7 @@ topic = pwnybrau
 
 [LOG]
 #logPrefix => AtlasSensors.[year].[month].[day].log
-logPrefix = AtlasSensors       
+logPrefix = Tilt       
 
 [HEC]
 #protocol - https or http
