adding sleeptim, updating docs and examples

--- a/src/publish.conf
+++ b/src/publish.conf
@@ -1,30 +1,83 @@
-[MQTT]
-#clientID:[optional] overrides the use of hostname 
-#clientID = myClient
+# Configuration File used by pwnybrau_tilt.py for publishing Temperature and Specific Gravity Sensor data.
+# It will listen for bluetooth ibeacon messages and filter for only tilt hydrometer message.
+# Each Stanza in the file addresses the value provided by the --output parameter.
 
-#broker:  MQTT broker service
-broker = test.mosquitto.org
-#port: tcp port MQTT broker is listening to
-port = 1883
-#topic: topic to post metric to
-topic = pwnybrau
+# $ python3 pwnybrau_tilt.py --help
+# usage: pwnybrau_tilt.py [-h] [--output {STDOUT,LOG,HEC,MQTT}]
+#                        [--output_config OUTPUT_CONFIG] [--loglevel LOGLEVEL]
+#                        [--listentime LISTENTIME] [--sleeptime SLEEPTIME]
+#                        [--hci HCI] [--name NAME]
+#
+# pwnbrau.py will listen for ibeacon messages from a Tilt hydrometer
 
+#LOG stanza defines log file to write sensor measurements.
 [LOG]
-#logPrefix => AtlasSensors.[year].[month].[day].log
-logPrefix = Tilt       
+# File prefix for sensor data.  It should be noted that [year].[month].[day] 
+# will be appended to the prefix.
+#   Example: logPrefix = AtlasSensors
+#   LogfileName: AtlasSensors.2023.01.20.log
+logPrefix = TiltSensors  
 
+# MQTT stanza defines information required to communicate sensor measurements to a MQTT broker.
+[MQTT]
+# MQTT broker service
+broker = test.mosquitto.org  
+
+# MQTT broker listening port
+#   TCP default: 1884
+#   TLS default: 8883
+port = 1884
+
+# User Credentials presented to the MQTT server.
+#   Note: server could be configured to use CN Name instead (see use_CN_as_username).
+#         This would override username here.
+username = rw
+password = readwrite
+
+# Toggle on/off attempt to use TLS encryption.
+use_TLS = false
+
+# Use the client certificates CN name - ignoring username.
+use_CN_as_username = false
+
+# Toggle on/off client side validation of the server's public certificate.  
+#     Probably not a good idea for production
+use_insecure_tls = true
+
+# Paths to certificates
+caCertPath = /path/to/ca.crt
+certfile = /path/to/client.crt
+keyfile = /path/to/client.key
+
+# topicPath is a prefix added to the sensor's name.  
+# The sensor's name is defined on the CLI using the --name parameter. 
+#   suntax:
+#     FULL TOPIC = topic = topicPath + name 
+#   example:   
+#     if:  topicPath = pwnybrau/sensors/
+#     and if cli:  atlasPH.py --name = AtlasPH ...
+#     
+#     topic = pwnybrau/sensors/AtlasPH   <- message published to the broker on this topic name.
+topicPath = pwnybrau/sensors/tilt/
+
+# Splunk HTTP Endpoint Collector configuration.
+# NOT IMPLEMENTED AT THIS TIME
 [HEC]
-#protocol - https or http
-protocol=https
+# HTTP Protocol to use.  https or http
+# protocol=https
+
 #indexers: list of indexers to spread the metrics over
 #      splunk cloud: http-inputs-<host>.splunkcloud.com
 indexers=10.10.10.10,10.10.10.11
-#port - override default HEC port onprem = 8088 or splunk cloud = 443
+
+#HEC port to use.  default HEC port onprem = 8088 or splunk cloud = 443
 port=8088
+
 #endpoint - which URI endpoint 
 #   /services/collector/event - json formatted data
 #   /services/collector/raw - raw event
 endpoint=/services/collector/raw
+
 #token - unique id used to post
-token = changeme
+token = GET_TOKEN_FROM_SPLUNK_ADMIN
 
